Fix navbar-fixed-top position in mobile view
Extra space on the right caused horizontal scrollbar

--- a/public/css/bootstrap-responsive.css
+++ b/public/css/bootstrap-responsive.css
@@ -821,11 +821,15 @@
     .navbar .dropdown-menu a {
         font-weight: normal;
     }
+    .navbar-fixed-top {
+        position: fixed;
+        margin-bottom: 18px;
+    }
 }
 
 @media (max-width: 800px) {
     .page {
-        width: 98%;
+        width: 100%;
     }
     /* .navbar .brand { */
     /*     margin-left: -1.5% !important; */
@@ -833,14 +837,18 @@
 }
 
 @media (max-width: 1024px) {
-    body {
+    html, body {
         padding: 0;
+        width: 100%;
     }
     .page {
         width: 100%;
-        padding-top: 40px;
+        /* padding-right: 10px; */
+        /* padding-left: 10px; */
+    }
+    .container-fluid {
         padding-right: 10px;
-        padding-left: 10px;
+        padding-left: 10px
     }
     .navbar .brand {
         margin-left: -1.5%;
